[package]
name = "vincenty-rs"
version = "1.0.3"
edition = "2021"
description = "Expose API for calculating distance using vincenty formulae"
repository = "https://github.com/vihu/vincenty-rs"
homepage = "https://github.com/vihu/vincenty-rs"
readme = "README.md"
keywords = ["vincenty", "geolocation", "geolib", "tide"]
categories = ["api", "geolocation"]
license = "MIT OR Apache-2.0"
authors = ["Rahul Garg <rg@vihu.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.10.0", features = ["attributes"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
h3ron = "0.14.0"
anyhow = "1.0.53"
http-types = "2.12.0"
